2007-11-20  Matthieu Nottale  <nottale@gostai.com>

	Adapt for internal UObject API change.
	* src/uobject.cc: Add an empty UGenericCallback::registerCallback.

2007-11-15  Guillaume Deslandes  <deslandes@gostai.com>

	Fix tags and channels behavior, update tests.
        The correct (cf Baillie) behavior is in 1.x/channels_tags.chk
	* src/ucommand.cc: Here.

2007-11-13  Matthieu Nottale  <nottale@gostai.com>

	Delete closed connection.
	* src/uconnection.cc: Don't send anything to closed connection.
	* src/userver.cc: At every call to work, scan connection list, and
	  delete closed ones.

2007-11-13  Matthieu Nottale  <nottale@gostai.com>

	Fix binary transmission in remote method call.
	* src/ucommand.cc: Don't send message as c-string.

2007-11-12  Akim Demaille  <demaille@gostai.com>

	Fix error message.
	* src/parser/bison/utoken.l: s/unrecognized/invalid/.

2007-11-12  Matthieu Nottale  <nottale@gostai.com>

	Fix segfault when "delete a & delete a".
	* src/ucommand.cc: When deleting a UVariable, recheck it
	  during the phase2, and don't complain if it's not there.
	* tests-local.mk: Remove corresponding test from XFAIL.

2007-11-12  Guillaume Deslandes  <deslandes@gostai.com>

	Restore var'n as a valid rvalue.
	* src/parser/bison/ugrammar.y: Here.

2007-11-12  Matthieu Nottale  <nottale@gostai.com>

	Fix remote call to method with no parameter.
	* src/ucommand.cc: Add missing variable initialization.

2007-11-12  Akim Demaille  <demaille@gostai.com>

	New failing test.
	* tests-local.mk: Add connection-delete.chk.

2007-11-08  Matthieu Nottale  <nottale@gostai.com>

	Fix bug in uconnection triggered when sending binaries.
	Credit goes to Florian for locating this.
	* include/kernel/uconnection.hh: Replace strdup by new/memcpy, data
	  is not a cstring.
	* src/uconnection.cc: Replace corresponding free by delete.

2007-11-05  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Add version.hh.
	* include/kernel/version.hh.in: New.
