@@ -1,3 +1,9 @@
+2007-11-22  Guillaume Deslandes  <deslandes@gostai.com>
+
+	Do not create duplicate callbak if USetUpdate is called multiple times.
+	* src/uobject.cc: Here.
+	(UObject): Set period to -1 in default constructor.
+
 2007-11-20  Matthieu Nottale  <nottale@gostai.com>
 
 	Adapt for internal UObject API change.
